fix spacing

--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,7 @@ body {
 
 .features__nav {
     display: flex;
+    align-items: center;
     padding: 65px 40px 20px 40px;
 }
 
@@ -86,8 +87,16 @@ body {
     width: 50%;
 }
 
+.features__left-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 .features__text {
-    padding: 70px 100px 30px 70px;
+    width: 500px;
+    padding-bottom: 30px;
+    padding-left: 70px;
 }
 
 .feature__subtitle {
@@ -111,7 +120,7 @@ body {
 }
 
 .feature__card {
-    width: 50%;
+    width: 300px;
     margin-left: 40px;
 }
 
@@ -134,8 +143,7 @@ body {
 }
 
 .features__article {
-    padding: 40px;
-    padding-top: 0;
+    padding-right: 40px;
     display: flex;
     flex-direction: column;
 }
@@ -160,7 +168,7 @@ body {
 }
 
 .features__article__footer {
-    margin-top: 100px;
+    margin-top: 200px;
 }
 
 .article__link {
@@ -174,6 +182,7 @@ body {
 
 .article__link--grey {
     color: #a4abb4;
+    font-weight: 400;
 }
 
 /* “Istaknuto svojstvo” proizvoda */
@@ -190,7 +199,9 @@ body {
 
 .featured-feature__title,
 .featured-feature__description {
-    padding: 0 100px 10px 70px;
+    padding-bottom: 10px;
+    padding-left: 70px;
+    width: 500px;
 }
 
 /* JOŠ “svojstava” */
@@ -206,6 +217,10 @@ body {
     width: 50%;
 }
 
+.more-features__title {
+    width: 500px;
+}
+
 .more-features__feature {
     display: flex;
     align-items: center;
@@ -218,11 +233,11 @@ body {
 
 .more-features__feature__image {
     margin: 64px;
-    margin-left: 32px;
 }
 
 .more-features__feature__text {
-    margin: 32px 0;
+    margin-left: 32px;
+    width: 400px;
 }
 
 .more-features__feature__title {
@@ -271,5 +286,5 @@ body {
 
 .article__image {
     width: 100%;
-    margin-bottom: 32px;
+    margin-bottom: 64px;
 }
